# openaiagents

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/agents/: __init__.py  agent_runner.py  tools.py
app/core/: __init__.py  config.py  logging.py
app/models/: schemas.py
app/services/: __init__.py  image_service.py  openai_client.py  pptx_service.py  workflow_service.py
app/utils/: __init__.py  convert.py
docs/: PROJECT_STRUCTURE.md
openaiagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_requests.sh  run.sh
templates/: template.pptx
tests/: test_health.py  test_images.py  test_pptx.py  test_workflow.py
